# AzureNativeLinuxAgent

./: AUTHORS  AzureNativeLinuxAgent.sln  AzureNativeLinuxAgent.vcxproj  Makefile.in  README.md  ReadMe.txt  config.h  config.h.in  configure.ac  configure.scan
data/: ExtensionConfig.1.xml  GoalState.1.xml  HostingEnvironmentConfig.xml  ShareConfig.xml  ovf-env-key.xml  ovf-env.xml  waagent_native.conf  wala_task.conf
src/: AbstractDistro.cpp  AbstractDistro.h  AgentConfig.cpp  AgentConfig.h  AzureEnvironment.cpp  AzureEnvironment.h  AzureNativeLinuxAgent.cpp  BlobRoutine.cpp  BlobRoutine.h  Certificates.cpp  Certificates.h  CertificationRoutine.cpp  CertificationRoutine.h  CommandExecuter.cpp  CommandExecuter.h  CommandResult.cpp  CommandResult.h  Deprovisioner.cpp  Deprovisioner.h  DeviceRoutine.cpp  DeviceRoutine.h  ExtensionConfig.cpp  ExtensionConfig.h  ExtensionsConfig.cpp  ExtensionsConfig.h  FileOperator.cpp  FileOperator.h  GoalState.cpp  GoalState.h  HandlerManifest.cpp  HandlerManifest.h  HostingEnvironmentConfig.cpp  HostingEnvironmentConfig.h  HttpResponse.cpp  HttpResponse.h  HttpRoutine.cpp  HttpRoutine.h  JsonRoutine.cpp  JsonRoutine.h  Logger.cpp  (+23 more)
